Added Idempotency and TTL
